--- a/core/package.json
+++ b/core/package.json
@@ -17,12 +17,12 @@
     "eslint": "npx projen eslint",
     "gradle-build": "npx projen gradle-build",
     "package": "npx projen package",
+    "package-all": "npx projen package-all",
+    "package:js": "npx projen package:js",
+    "package:python": "npx projen package:python",
     "pip-install": "npx projen pip-install",
     "post-compile": "npx projen post-compile",
     "pre-compile": "npx projen pre-compile",
-    "publish:github": "npx projen publish:github",
-    "publish:npm": "npx projen publish:npm",
-    "publish:pypi": "npx projen publish:pypi",
     "release": "npx projen release",
     "test": "npx projen test",
     "test:deploy": "npx projen test:deploy",
@@ -41,26 +41,27 @@
     "organization": true
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.134",
+    "@aws-cdk/assert": "1.142.0",
+    "@aws-cdk/assertions": "1.142.0",
     "@types/jest": "^27.0.1",
     "@types/js-yaml": "^4.0.3",
-    "@types/node": "^14.17.0",
-    "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "@typescript-eslint/parser": "^4.30.0",
-    "aws-cdk": "1.130.0",
+    "@types/node": "^12",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
+    "aws-cdk": "1.142.0",
+    "cdk-nag": "^1.0.0",
     "esbuild": "^0.12.24",
-    "eslint": "^7.32.0",
+    "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.24.2",
     "glob": "^7.2.0",
     "jest": "^27.1.0",
-    "jest-junit": "^12",
+    "jest-junit": "^13",
     "jest-runner-groups": "^2.1.0",
     "jsii": "^1.34.0",
     "jsii-diff": "^1.34.0",
     "jsii-docgen": "^3.3.8",
-    "jsii-pacmak": "^1.34.0",
     "json-schema": "^0.3.0",
     "projen": "^0.33.10",
     "standard-version": "^9",
@@ -68,67 +69,68 @@
     "typescript": "^4.4.2"
   },
   "peerDependencies": {
-    "@aws-cdk/assertions": "1.134",
-    "@aws-cdk/aws-athena": "1.134",
-    "@aws-cdk/aws-autoscaling": "1.134",
-    "@aws-cdk/aws-ec2": "1.134",
-    "@aws-cdk/aws-eks": "1.134",
-    "@aws-cdk/aws-emr": "1.134",
-    "@aws-cdk/aws-emrcontainers": "1.134",
-    "@aws-cdk/aws-events": "1.134",
-    "@aws-cdk/aws-events-targets": "1.134",
-    "@aws-cdk/aws-glue": "1.134",
-    "@aws-cdk/aws-iam": "1.134",
-    "@aws-cdk/aws-kinesis": "1.134",
-    "@aws-cdk/aws-kinesisfirehose": "1.134",
-    "@aws-cdk/aws-kinesisfirehose-destinations": "1.134",
-    "@aws-cdk/aws-kms": "1.134",
-    "@aws-cdk/aws-lambda": "1.134",
-    "@aws-cdk/aws-lambda-python": "1.134",
-    "@aws-cdk/aws-logs": "1.134",
-    "@aws-cdk/aws-redshift": "1.134",
-    "@aws-cdk/aws-s3": "1.134",
-    "@aws-cdk/aws-s3-assets": "1.134",
-    "@aws-cdk/aws-s3-deployment": "1.134",
-    "@aws-cdk/aws-secretsmanager": "1.134",
-    "@aws-cdk/aws-stepfunctions": "1.134",
-    "@aws-cdk/aws-stepfunctions-tasks": "1.134",
-    "@aws-cdk/core": "1.134",
-    "@aws-cdk/custom-resources": "1.134",
-    "@aws-cdk/lambda-layer-awscli": "1.134",
+    "@aws-cdk/assertions": "1.142.0",
+    "@aws-cdk/aws-athena": "1.142.0",
+    "@aws-cdk/aws-autoscaling": "1.142.0",
+    "@aws-cdk/aws-ec2": "1.142.0",
+    "@aws-cdk/aws-eks": "1.142.0",
+    "@aws-cdk/aws-emr": "1.142.0",
+    "@aws-cdk/aws-emrcontainers": "1.142.0",
+    "@aws-cdk/aws-events": "1.142.0",
+    "@aws-cdk/aws-events-targets": "1.142.0",
+    "@aws-cdk/aws-glue": "1.142.0",
+    "@aws-cdk/aws-iam": "1.142.0",
+    "@aws-cdk/aws-kinesis": "1.142.0",
+    "@aws-cdk/aws-kinesisfirehose": "1.142.0",
+    "@aws-cdk/aws-kinesisfirehose-destinations": "1.142.0",
+    "@aws-cdk/aws-kms": "1.142.0",
+    "@aws-cdk/aws-lambda": "1.142.0",
+    "@aws-cdk/aws-lambda-python": "1.142.0",
+    "@aws-cdk/aws-logs": "1.142.0",
+    "@aws-cdk/aws-redshift": "1.142.0",
+    "@aws-cdk/aws-s3": "1.142.0",
+    "@aws-cdk/aws-s3-assets": "1.142.0",
+    "@aws-cdk/aws-s3-deployment": "1.142.0",
+    "@aws-cdk/aws-secretsmanager": "1.142.0",
+    "@aws-cdk/aws-stepfunctions": "1.142.0",
+    "@aws-cdk/aws-stepfunctions-tasks": "1.142.0",
+    "@aws-cdk/core": "1.142.0",
+    "@aws-cdk/custom-resources": "1.142.0",
+    "@aws-cdk/lambda-layer-awscli": "1.142.0",
     "constructs": "^3.2.27"
   },
   "dependencies": {
-    "@aws-cdk/assertions": "1.134",
-    "@aws-cdk/aws-athena": "1.134",
-    "@aws-cdk/aws-autoscaling": "1.134",
-    "@aws-cdk/aws-ec2": "1.134",
-    "@aws-cdk/aws-eks": "1.134",
-    "@aws-cdk/aws-emr": "1.134",
-    "@aws-cdk/aws-emrcontainers": "1.134",
-    "@aws-cdk/aws-events": "1.134",
-    "@aws-cdk/aws-events-targets": "1.134",
-    "@aws-cdk/aws-glue": "1.134",
-    "@aws-cdk/aws-iam": "1.134",
-    "@aws-cdk/aws-kinesis": "1.134",
-    "@aws-cdk/aws-kinesisfirehose": "1.134",
-    "@aws-cdk/aws-kinesisfirehose-destinations": "1.134",
-    "@aws-cdk/aws-kms": "1.134",
-    "@aws-cdk/aws-lambda": "1.134",
-    "@aws-cdk/aws-lambda-python": "1.134",
-    "@aws-cdk/aws-logs": "1.134",
-    "@aws-cdk/aws-redshift": "1.134",
-    "@aws-cdk/aws-s3": "1.134",
-    "@aws-cdk/aws-s3-assets": "1.134",
-    "@aws-cdk/aws-s3-deployment": "1.134",
-    "@aws-cdk/aws-secretsmanager": "1.134",
-    "@aws-cdk/aws-stepfunctions": "1.134",
-    "@aws-cdk/aws-stepfunctions-tasks": "1.134",
-    "@aws-cdk/core": "1.134",
-    "@aws-cdk/custom-resources": "1.134",
-    "@aws-cdk/lambda-layer-awscli": "1.134",
+    "@aws-cdk/assertions": "1.142.0",
+    "@aws-cdk/aws-athena": "1.142.0",
+    "@aws-cdk/aws-autoscaling": "1.142.0",
+    "@aws-cdk/aws-ec2": "1.142.0",
+    "@aws-cdk/aws-eks": "1.142.0",
+    "@aws-cdk/aws-emr": "1.142.0",
+    "@aws-cdk/aws-emrcontainers": "1.142.0",
+    "@aws-cdk/aws-events": "1.142.0",
+    "@aws-cdk/aws-events-targets": "1.142.0",
+    "@aws-cdk/aws-glue": "1.142.0",
+    "@aws-cdk/aws-iam": "1.142.0",
+    "@aws-cdk/aws-kinesis": "1.142.0",
+    "@aws-cdk/aws-kinesisfirehose": "1.142.0",
+    "@aws-cdk/aws-kinesisfirehose-destinations": "1.142.0",
+    "@aws-cdk/aws-kms": "1.142.0",
+    "@aws-cdk/aws-lambda": "1.142.0",
+    "@aws-cdk/aws-lambda-python": "1.142.0",
+    "@aws-cdk/aws-logs": "1.142.0",
+    "@aws-cdk/aws-redshift": "1.142.0",
+    "@aws-cdk/aws-s3": "1.142.0",
+    "@aws-cdk/aws-s3-assets": "1.142.0",
+    "@aws-cdk/aws-s3-deployment": "1.142.0",
+    "@aws-cdk/aws-secretsmanager": "1.142.0",
+    "@aws-cdk/aws-stepfunctions": "1.142.0",
+    "@aws-cdk/aws-stepfunctions-tasks": "1.142.0",
+    "@aws-cdk/core": "1.142.0",
+    "@aws-cdk/custom-resources": "1.142.0",
+    "@aws-cdk/lambda-layer-awscli": "1.142.0",
     "@exodus/schemasafe": "^1.0.0-rc.6",
     "aws-sdk": "^2.981.0",
+    "cdk-nag": "^1.0.0",
     "js-yaml": "^4.1.0",
     "uuid": "^8.3.2"
   },
@@ -151,8 +153,8 @@
   "jest": {
     "runner": "groups",
     "testMatch": [
-      "**/__tests__/**/*.ts?(x)",
-      "**/?(*.)+(spec|test).ts?(x)"
+      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/(test|src)/**/?(*.)+(spec|test).ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
@@ -160,6 +162,7 @@
       "json",
       "lcov",
       "clover",
+      "cobertura",
       "text"
     ],
     "coverageDirectory": "coverage",
